--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", "Open Sans", sans-serif;
   padding-top: 54px;
   color: #2b2e3b;
 }
